--- a/server/package.json
+++ b/server/package.json
@@ -56,6 +56,7 @@
     "@graphql-tools/schema": "^9.0.12",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^7.7.7",
     "express-oauth2-jwt-bearer": "^1.2.0",
