--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,14 @@
   "name": "c4-game-client",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@apollo/client": "^3.7.2",
-    "@auth0/auth0-react": "^1.12.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
@@ -12,10 +17,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.8",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
     "graphql": "^16.6.0",
     "graphql-ws": "^5.11.2",
     "history": "^5.3.0",
@@ -28,11 +29,12 @@
     "urql": "^3.0.3",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^16.18.8",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9"
   },
   "eslintConfig": {
     "extends": [
@@ -51,8 +53,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.191"
   }
 }
