--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/jest": "^29.2.3",
     "@types/jsonwebtoken": "^8.5.9",
@@ -54,6 +55,7 @@
   "dependencies": {
     "@apollo/server": "^4.2.2",
     "@graphql-tools/schema": "^9.0.12",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
