--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "prettier-watch:darwin:linux": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
     "prettier-watch:default": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
     "test": "jest",
-    "test:dev": "jest --watchAll"
+    "test:dev": "jest --watchAll",
+    "gen:grpc": "grpc_tools_node_protoc --ts_out=src/generated --grpc_out=grpc_js:src/generated --proto_path=src/api/grpc/proto src/api/grpc/proto/*.proto"
   },
   "husky": {
     "hooks": {
@@ -41,6 +42,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^27.1.6",
     "eslint-plugin-prettier": "^4.2.1",
+    "grpc_tools_node_protoc_ts": "^5.3.3",
+    "grpc-tools": "^1.13.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
@@ -55,6 +58,8 @@
   "dependencies": {
     "@apollo/server": "^4.2.2",
     "@graphql-tools/schema": "^9.0.12",
+    "@grpc/grpc-js": "^1.13.3",
+    "@grpc/proto-loader": "^0.7.15",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
@@ -71,6 +76,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongodb": "^4.13.0",
+    "socket.io": "^4.8.1",
     "ws": "^8.11.0"
   }
 }
