--- a/server/package.json
+++ b/server/package.json
@@ -1,82 +1,30 @@
 {
-  "name": "typescript-starter",
+  "name": "server",
   "version": "1.0.0",
-  "description": "A basic typescript app starter for 2023.",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "build": "rimraf ./build && tsc",
-    "start:dev": "npx nodemon",
-    "start": "npm run build && node build/index.js",
-    "lint": "eslint . --ext .ts",
-    "prettier-format": "run-script-os",
-    "prettier-format:win32": "prettier --config .prettierrc \"./src/**/*.ts\" --write",
-    "prettier-format:darwin:linux": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "prettier-format:default": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "prettier-watch": "run-script-os",
-    "prettier-watch:win32": "onchange \"src/**/*.ts\" -- prettier --write {{changed}}",
-    "prettier-watch:darwin:linux": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
-    "prettier-watch:default": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
-    "test": "jest",
-    "test:dev": "jest --watchAll",
-    "gen:grpc": "grpc_tools_node_protoc --ts_out=src/generated --grpc_out=grpc_js:src/generated --proto_path=src/api/grpc/proto src/api/grpc/proto/*.proto"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run test && npm run prettier-format && npm run lint"
-    }
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "gen:proto": "grpc_tools_node_protoc --ts_out=src/generated --js_out=import_style=commonjs,binary:src/generated --grpc_out=grpc_js:src/generated --proto_path=src/proto src/proto/*.proto"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@grpc/grpc-js": "^1.13.4",
+    "@grpc/proto-loader": "^0.7.15",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1"
+  },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.13",
-    "@types/jest": "^29.2.3",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/lodash": "^4.14.191",
-    "@types/node": "^18.11.10",
-    "@types/ws": "^8.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "eslint": "^8.29.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest": "^27.1.6",
-    "eslint-plugin-prettier": "^4.2.1",
+    "@types/express": "^5.0.2",
     "grpc_tools_node_protoc_ts": "^5.3.3",
     "grpc-tools": "^1.13.0",
-    "husky": "^8.0.2",
-    "jest": "^29.3.1",
-    "nodemon": "^2.0.20",
-    "onchange": "^7.1.0",
-    "prettier": "^2.8.0",
-    "rimraf": "^3.0.2",
-    "run-script-os": "^1.1.6",
-    "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
-  },
-  "dependencies": {
-    "@apollo/server": "^4.2.2",
-    "@graphql-tools/schema": "^9.0.12",
-    "@grpc/grpc-js": "^1.13.3",
-    "@grpc/proto-loader": "^0.7.15",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-jwt": "^7.7.7",
-    "express-oauth2-jwt-bearer": "^1.2.0",
-    "graphql": "^16.6.0",
-    "graphql-subscriptions": "^2.0.0",
-    "graphql-ws": "^5.11.2",
-    "jest-cucumber": "^3.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "jwks-rsa": "^3.0.0",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.4",
-    "mongodb": "^4.13.0",
-    "socket.io": "^4.8.1",
-    "ws": "^8.11.0"
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
