--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,18 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "CommonJS",
-    "lib": ["es2020"],
-    "allowJs": true,
-    "outDir": "build",
-    "rootDir": "src",
+    "target": "ES2020",
+    "module": "commonjs",
     "strict": true,
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "types": ["node", "jest"],
-    "skipLibCheck": true
+    "outDir": "dist",
+    "rootDir": "src"
   },
-  "include": ["src/**/*"],
-  "exclude": ["src/**/*.spec.ts"]
+  "include": ["src/**/*"]
 }
